--- a/index.html
+++ b/index.html
@@ -6,9 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <header></header>
+    <header>
+      <ul id="ul-1">
+        <li><a href="#">About</a></li>
+        <li><a href="#">Store</a></li>
+      </ul>
+      <ul id="ul-2">
+        <li><a href="#">Gmail</a></li>
+        <li><a href="#">Images</a></li>
+        <img id="icon" src="./img/icon-menu.jpg" alt="" />
+        <li id="li-right"><a id="a-right" href="#">Sign In</a></li>
+      </ul>
+    </header>
   </body>
 </html>
