--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
   <body>
     <header>
       <ul id="ul-1">
-        <li><a href="#">About</a></li>
-        <li><a href="#">Store</a></li>
+        <li><a class="header-a" href="#">About</a></li>
+        <li><a class="header-a" href="#">Store</a></li>
       </ul>
       <ul id="ul-2">
-        <li><a href="#">Gmail</a></li>
-        <li><a href="#">Images</a></li>
+        <li><a class="header-a" href="#">Gmail</a></li>
+        <li><a class="header-a" href="#">Images</a></li>
         <img id="icon" src="./img/icon-menu.jpg" alt="" />
-        <li id="li-right"><a id="a-right" href="#">Sign In</a></li>
+        <li id="li-right" class="header-a">
+          <a id="a-right" href="#">Sign In</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -27,9 +29,34 @@
       </figure>
       <section id="section-1">
         <img id="search" src="./img/magnifying_glass.jpg" alt="" />
-        <input type="text" />
+        <input type="text" id="input-1" />
         <img id="mic" src="./img/google_microphone.png" alt="" />
       </section>
+      <section id="section-2">
+        <input class="section-2-input" type="submit" value="Google Search" />
+        <input
+          class="section-2-input"
+          type="submit"
+          value="I'm Feeling Lucky Search"
+        />
+      </section>
+      <section id="section-3">
+        <span>Other Languages you can use Google:</span> <a href="#">English</a>
+      </section>
     </main>
+    <footer>
+      <p>Turkey</p>
+      <hr />
+      <ul class="footer-ul" id="footer-ul-l">
+        <li><a href="#">Advertising</a></li>
+        <li><a href="#">Business</a></li>
+        <li><a href="#">How Search Works</a></li>
+      </ul>
+      <ul class="footer-ul" id="footer-ul-r">
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Settings</a></li>
+      </ul>
+    </footer>
   </body>
 </html>
