--- a/index.html
+++ b/index.html
@@ -4,59 +4,117 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon" />
     <title>Google Landing Page</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon" />
   </head>
   <body>
-    <header>
-      <ul id="ul-1">
-        <li><a class="header-a" href="#">About</a></li>
-        <li><a class="header-a" href="#">Store</a></li>
-      </ul>
-      <ul id="ul-2">
-        <li><a class="header-a" href="#">Gmail</a></li>
-        <li><a class="header-a" href="#">Images</a></li>
-        <img id="icon" src="./img/icon-menu.jpg" alt="" />
-        <li id="li-right" class="header-a">
-          <a id="a-right" href="#">Sign In</a>
-        </li>
-      </ul>
+    <header class="header">
+      <div class="header__left">
+        <ul class="header__list">
+          <li class="header__item">
+            <a class="header__link" href="">About</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="">Store</a>
+          </li>
+        </ul>
+      </div>
+      <div class="header__right">
+        <ul class="header__list">
+          <li class="header__item">
+            <a class="header__link" href="">Gmail</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href="">Images</a>
+          </li>
+          <li class="header__item">
+            <a class="header__link" href=""
+              ><img
+                src="./images/appicon.png"
+                class="header__link--appicon"
+                alt=""
+            /></a>
+          </li>
+
+          <li class="header__item">
+            <a class="header__link" href=""
+              ><button class="header__link--button">Sign In</button></a
+            >
+          </li>
+        </ul>
+      </div>
     </header>
-    <main>
-      <figure>
-        <img id="google-logo" src="./img/googlelogo.png" alt="" />
-      </figure>
-      <section id="section-1">
-        <img id="search" src="./img/magnifying_glass.jpg" alt="" />
-        <input type="text" id="input-1" />
-        <img id="mic" src="./img/google_microphone.png" alt="" />
-      </section>
-      <section id="section-2">
-        <input class="section-2-input" type="submit" value="Google Search" />
-        <input
-          class="section-2-input"
-          type="submit"
-          value="I'm Feeling Lucky Search"
+    <main class="main">
+      <img src="./images/googlelogo.png" class="main__logo" alt="" />
+      <div class="main__search-bar">
+        <img
+          src="./images/magnifying_glass.jpg"
+          class="main__search-bar--magnifier"
+          alt=""
         />
-      </section>
-      <section id="section-3">
-        <span>Other Languages you can use Google:</span> <a href="#">English</a>
-      </section>
+        <input
+          type="search"
+          name=""
+          class="main__search-bar--input"
+          id="form-search"
+        />
+        <img
+          src="./images/google_microphone.png"
+          class="main__search-bar--mic"
+          alt=""
+        />
+      </div>
+      <div class="">
+        <button class="main__buttons" id="searchBtn">Google Search</button>
+        <button class="main__buttons">I'm Feeling Lucky</button>
+      </div>
+      <div class="main__language">
+        <p>
+          Other Languages you can use Google:
+          <a href="" class="main__language--link">English</a>
+        </p>
+      </div>
     </main>
-    <footer>
-      <p>Turkey</p>
-      <hr />
-      <ul class="footer-ul" id="footer-ul-l">
-        <li><a href="#">Advertising</a></li>
-        <li><a href="#">Business</a></li>
-        <li><a href="#">How Search Works</a></li>
-      </ul>
-      <ul class="footer-ul" id="footer-ul-r">
-        <li><a href="#">Privacy</a></li>
-        <li><a href="#">Terms</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
+    <footer class="footer">
+      <div class="footer__country">Turkey</div>
+      <div class="footer__left">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link" href="">Advertising</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="">Business</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="">How Search Works</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__right">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a class="footer__link" href="">Privacy</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="">Terms</a>
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="">Settings</a>
+          </li>
+        </ul>
+      </div>
     </footer>
+    <script>
+      let query = document.querySelector("#form-search");
+      let searchBtn = document.querySelector("#searchBtn");
+
+      searchBtn.onclick = function (e) {
+        e.preventDefault();
+        let url = "https://www.google.com/search?q=" + query.value;
+        window.open(url, "_self");
+        query.value = "";
+      };
+    </script>
   </body>
 </html>
